# tree-sitter-json5

./: Cargo.toml  README.md  grammar.js  package.json
.github/workflows/: ci.yml
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: numbers.txt  values.txt
test/highlight/: keys.json5  values.json5
