[package]
name = "tree-sitter-json5"
description = "JSON5 grammar for the tree-sitter parsing library"
version = "0.20.0"
keywords = ["incremental", "parsing", "json5"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/m-rots/tree-sitter-json5"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
